[gd_scene load_steps=2 format=3 uid="uid://5gbev8c1y0f3"]

[ext_resource type="Script" path="res://RikishiListItem.gd" id="2_0e48y"]

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.5
offset_right = 57.5
offset_bottom = 31.0
grow_horizontal = 2
script = ExtResource("2_0e48y")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2

[node name="StrBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 2
